tdf#130782 tdf#153203 writerfilter,sw: DOCX import/export of a11y

... related attributes name/title/description on Chart embedded objects.

DomainMapper first needs to apply the properties to an SdrOLE2Obj, then
later copy it to SwXEmbeddedObject.

Change-Id: Id766be1eedf348caf22640ab6c177d81a0971749
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146494
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>